--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@
         </div>
     </div>
     
+    <div class="container">
+        <blockquote class="blockquote text-right">
+            <p class="mb-0">There shall never be another season of silence until women have the same rights men have on this green earth</p>
+            <footer class="blockquote-footer">Susan B. Anthony</footer>
+        </blockquote>
+    </div>
+    
     <!-- Section 2 -->
     <div class="jumbotron jumbotron-fluid" style="background-color: transparent !important">
         <div class="container">
