--- a/process.html
+++ b/process.html
@@ -19,9 +19,9 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-link" href="pre_pocess.html">pre-Process</a>
-                    <a class="nav-link" href="process">Process</a>
-                    <a class="nav-link" href="post_process">post-Process</a>
+                    <a class="nav-link" href="pre_process.html">pre-Process</a>
+                    <a class="nav-link" href="process.html">Process</a>
+                    <a class="nav-link" href="post_process.html">post-Process</a>
                 </div>
             </div>
         </nav>
