added primary source

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
         <p class="lead">Sources</p>
         <p>https://www.mcny.org/story/100-years-19th-amendment?gclid=CjwKCAiAtK79BRAIEiwA4OskBnFkPGJ25j8k7tFHB-oocgY72ZmFcQSVyjldZAeqRL2xK6dflCCvLhoCOhwQAvD_BwE</p>
         <p>https://www.villagepreservation.org/2020/07/31/sarah-smith-garnet-suffragist-principal-villager/</p>
+        <!-- Source to be added --> <p>https://www.docsteach.org/documents/document/awsa-memorial</p>
     </div>
     
     
