[add] added info under pre-process page and updated sources

--- a/pre_process.html
+++ b/pre_process.html
@@ -1,38 +1,110 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>19th Amendment</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>19th Amendment</title>
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
-    <!-- Navbar -->
-    <div class="shadow p-3 mb-5 bg-white rounded sticky-top">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: transparent !important;">
-            <a class="navbar-brand" href="#">19th Amendment</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-link" href="pre_process.html">pre-Process</a>
-                    <a class="nav-link" href="process.html">Process</a>
-                    <a class="nav-link" href="post_process.html">post-Process</a>
-                </div>
-            </div>
-        </nav>
-    </div>
-    
-<!-- ======= Footer ======= -->
-<footer id="footer">
-  <div class="container d-md-flex py-4">
-    <div class="mr-md-auto text-center text-md-left">
-      <div class="copyright">
-        Copyright &copy; <script>document.write(new Date().getFullYear())</script> <strong><span>19th Amendment</span></strong>. All Rights Reserved
+  <!-- Navbar -->
+  <div class="shadow p-3 mb-5 bg-white rounded sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: transparent !important;">
+      <a class="navbar-brand" href="#">19th Amendment</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="pre_process.html">pre-Process</a>
+          <a class="nav-link" href="process.html">Process</a>
+          <a class="nav-link" href="post_process.html">post-Process</a>
+        </div>
+      </div>
+    </nav>
+  </div>
+  
+  <!-- Women Suffrage -->
+  <div class="jumbotron jumbotron-fluid" style="background-color: transparent !important">
+    <div class="container">
+      <div class="container">
+        <div class="row">
+          <div class="col-8">
+            <h1 class="display-4">Women Suffrage</h1>
+            <p class="lead">During the early history of America, women suffered from a lack of rights and had to follow conventions on how they should behave</p>
+            <p class="lead">This was the time that women had to suffer from all of this consequences, for example, they couldn't own a property and had no legal claim to any money.</p>
+            <p class="lead">Women decided to start a campaign called the Women Suffrage Campaing, it started before the Civil War. It was a small campaign but it grew over time, many American women were resisting to the conventional ideas of women's rights.</p>
+          </div>
+          <div class="col">
+            <figure class="figure">
+              <img src="https://www.loc.gov/static/classroom-materials/womens-suffrage/images/squelcher.jpg" height="300" alt="">
+              <figcaption class="figure-caption text-right">A Squelcher for Woman Suffrage</figcaption>
+            </figure>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+
+  <!-- Seneca Falls Convention -->
+  <div class="jumbotron jumbotron-fluid" style="background-color: transparent !important">
+    <div class="container">
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <figure class="figure">
+              <img src="https://www.loc.gov/static/managed-content/uploads/sites/10/1848/07/Call-to-SF-convention-Seneca-County-Courier-July-11-1848small.jpg" height="300" alt="">
+              <figcaption class="figure-caption text-right">Seneca County Courier (Seneca County, New York), July 14, 1848. Women’s Rights National Historical Park. National Park Service.</figcaption>
+            </figure>
+          </div>
+          <div class="col-8">
+            <h1 class="display-4">Seneca Falls Convention</h1>
+            <p class="lead">The movement kept small until 1848 that the movement started to get some national recognition</p>
+            <p class="lead">On July 19, 1848 the Seneca Falls convention was held, this was a two day convention in Wesleyan Chapel, Seneca Falls, New York. There were an estimated 300 attendees, a lot of men and women that worked in the anti-slavery movement joined the convention, and they eventually shifted to the fight to obtain equal rights for women.</p>
+            <p class="lead"><strong>Elizabeth Cady Stanton</strong> made her public speech the first day of the convention which helped people understand the main purpose of the meeting.</p>
+            <br>
+            <blockquote class="blockquote text-center">
+              <p class="mb-0">We are assembled to protest against a form of government, existing without the consent of the governed – to declare our right to be free as man is free, to be represented in the government which we are taxed to support, to have such disgraceful laws as give man the power to chastise and imprison his wife, to take the wages which she earns, the property which she inherits, and, in case of separation, the children of her love; laws test against such unjust laws as these that we are assembled today, and to have them, if possible, forever erased from our statute-books, deeming them as a shame and a disgrace to a Christian republic in the nineteenth century.…</p>
+              <footer class="blockquote-footer">Elizabeth Cady Stanton</footer>
+            </blockquote>
+            <br>
+            <p class="lead">After her speech Elizabeth read the Declaration of Sentiments, this was a document that expressed the goal of granting women the rights and freedoms that the Declaration of Independance granted to men.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Declaration of Sentiments -->
+  <div class="jumbotron jumbotron-fluid" style="background-color: transparent !important">
+    <div class="container">
+      <div class="container">
+        <div class="row">
+          <div class="col-8">
+            <h1 class="display-4">Declaration of Sentiments</h1>
+            <p class="lead">The Declaration of Sentiments was a document read during the Seneca Falls Convention that stated that women should receive equal rights just as men, it was based on the model of the American Declaration of Independance and it asked to be acknowledged and respected by society.</p>
+            <p class="lead">The document was signed by <strong>62 women and 32 men</strong></p>
+          </div>
+          <div class="col">
+            <figure class="figure">
+              <img src="https://www.loc.gov/static/managed-content/uploads/sites/10/1848/07/jul-19-convention.jpg" height="500" alt="">
+              <figcaption class="figure-caption text-right">Report of the Woman’s Rights Convention, held at Seneca Falls, New York, July 19th and 20th, 1848. Proceedings and Declaration of Sentiments.</figcaption>
+            </figure>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="container d-md-flex py-4">
+      <div class="mr-md-auto text-center text-md-left">
+        <div class="copyright">
+          Copyright &copy; <script>document.write(new Date().getFullYear())</script> <strong><span>19th Amendment</span></strong>. All Rights Reserved
+        </div>
+      </div>
+    </div>
