fixed navbar to display active

--- a/pre_process.html
+++ b/pre_process.html
@@ -18,8 +18,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-          <a class="nav-link" href="pre_process.html">pre-Process</a>
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link active" href="pre_process.html">pre-Process</a>
           <a class="nav-link" href="process.html">Process</a>
           <a class="nav-link" href="post_process.html">post-Process</a>
         </div>
