completed post process tab

--- a/post_process.html
+++ b/post_process.html
@@ -12,7 +12,7 @@
     <!-- Navbar -->
     <div class="shadow p-3 mb-5 bg-white rounded sticky-top">
         <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: transparent !important;">
-            <a class="navbar-brand" href="#">19th Amendment</a>
+            <a class="navbar-brand" href="index.html">19th Amendment</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -20,11 +20,56 @@
                 <div class="navbar-nav">
                     <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
                     <a class="nav-link" href="pre_process.html">pre-Process</a>
-                    <a class="nav-link" href="process.html">Process</a>
-                    <a class="nav-link" href="post_process">post-Process</a>
+                    <div class="dropdown">
+                      <a class="nav-link">Process</a>
+                      <div class="dropdown-content">
+                        <a href="fed.html">Fed Gov't</a>
+                        <a href="harry.html">Harry Burn</a>
+                        <a href="states.html">States</a>
+                      </div>
+                    </div>
+                    <a class="nav-link" href="post_process.html">post-Process</a>
                 </div>
             </div>
         </nav>
+    </div>
+
+    <!-- Section 1 -->
+    <div class="jumbotron jumbotron-fluid" style="background-color: transparent !important">
+      <div class="container">
+          <div class="container">
+              <div class="row">
+                  <div class="col-6">
+                    <h1 class="display-4">August 18, 1920</h1>
+                    <h4>19th amendement is ratified</h4>
+                    <br>
+                    <p class="lead">The ammendment gets the necessary 3/4 vote of the states and majority of Congress for ratification of an ammendment to the U.S. Constitution.</p>
+                  </div>
+                  <div class="col">
+                    <figure class="figure">
+                      <img src="./static/img/celebration.jpg" height="375" alt="">
+                      <figcaption class="figure-caption text-right"><a href="https://www.history.com/news/19th-amendment-women-vote-timeline">American suffragists hold a jubilee celebrating their victory following the passing of the 19th Amendment in August 1920.</a></figcaption>
+                    </figure>
+                  </div>
+              </div>
+          </div>
+      </div>
+    </div>
+
+    <!-- Section 2 -->
+    <div class="jumbotron jumbotron-fluid" style="background-color: transparent !important">
+      <div class="container">
+          <h1 class="display-4">Life After the Amendment Passed</h1>
+          <p class="lead">Under the 19th amendment, women, excluding Native American women, were given the right to vote. Despite having the right to vote, stipulations and roadblocks were put up to limit women, especially Black women and other minority backgrounds, at the ballot box.</p>
+          <p class="lead">Road blocks included:</p>
+          <ul>
+            <li>Poll taxes</li>
+            <li>Literacy tests</li>
+            <li>etc.</li>
+          </ul>
+          <p class="lead">Native Americans were not recognized as citizens until 1924 throught that passage of the Snyder Act (Indian Citizenship Act).</p>
+          <p class="lead">While native-born women were impacted by the 19th ammendment, immigrant women were barred from voting until the Immigration and Nationality Act of 1952 which gave them citizenship and therefore voting rights..</p>
+      </div>
     </div>
     
 <!-- ======= Footer ======= -->
