completed post process tab[2]

--- a/post_process.html
+++ b/post_process.html
@@ -68,16 +68,18 @@
             <li>etc.</li>
           </ul>
           <p class="lead">Native Americans were not recognized as citizens until 1924 throught that passage of the Snyder Act (Indian Citizenship Act).</p>
-          <p class="lead">While native-born women were impacted by the 19th ammendment, immigrant women were barred from voting until the Immigration and Nationality Act of 1952 which gave them citizenship and therefore voting rights..</p>
+          <p class="lead">While native-born women were impacted by the 19th amendment, immigrant women were barred from voting until the Immigration and Nationality Act of 1952 which gave them citizenship and therefore voting rights.</p>
+          <p class="lead">Later on in the 20th century did the states who refused ratification, then formally ratify the 19th amendment. (My Mother Made Me Do It A Short History of the Nineteenth Amendment. - Dominican Libray)</p>
       </div>
     </div>
     
-<!-- ======= Footer ======= -->
-<footer id="footer">
-  <div class="container d-md-flex py-4">
-    <div class="mr-md-auto text-center text-md-left">
-      <div class="copyright">
-        Copyright &copy; <script>document.write(new Date().getFullYear())</script> <strong><span>19th Amendment</span></strong>. All Rights Reserved
+    <!-- ======= Footer ======= -->
+    <footer id="footer">
+      <div class="container d-md-flex py-4">
+        <div class="mr-md-auto text-center text-md-left">
+          <div class="copyright">
+            Copyright &copy; <script>document.write(new Date().getFullYear())</script> <strong><span>19th Amendment</span></strong>. All Rights Reserved
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
+    </footer>
