--- a/fed.html
+++ b/fed.html
@@ -102,6 +102,8 @@
       </div>
     </div>
 
+    <p>Source related to states that was used</p>
+
     <!-- ======= Footer ======= -->
     <footer id="footer">
       <div class="container d-md-flex py-4">
@@ -109,6 +111,14 @@
           <div class="copyright">
             Copyright &copy; <script>document.write(new Date().getFullYear())</script> <strong><span>19th Amendment</span></strong>. All Rights Reserved
           </div>
+        </div>
+        <div class="mr-md-auto text-center text-md-left">
+          Sources used on this page:
+          <ul>
+            <li><a href="https://www.history.com/news/19th-amendment-women-vote-timeline">History.com's women vote timeline</a></li>
+            <li><a href="https://www.nps.gov/subjects/womenshistory/womens-suffrage-timeline.htm">National Park Service's suffrage timeline</a></li>
+            <li><a href="https://www.britannica.com/biography/Jeannette-Rankin">Jeanette Rankin Picture</a></li>
+          </ul>
         </div>
       </div>
     </footer>
