completed post process tab[3]

--- a/post_process.html
+++ b/post_process.html
@@ -81,5 +81,12 @@
             Copyright &copy; <script>document.write(new Date().getFullYear())</script> <strong><span>19th Amendment</span></strong>. All Rights Reserved
           </div>
         </div>
+        <div class="mr-md-auto text-center text-md-left">
+          Sources used on this page:
+          <ul>
+            <li>My Mother Made Me Do It A Short History of the Nineteenth Amendment. - Dominican Libray</li>
+            <li><a href="https://www.history.com/news/19th-amendment-women-vote-timeline">History.com's women vote timeline</a></li>
+          </ul>
+        </div>
       </div>
     </footer>
