added pics to states tab

--- a/harry.html
+++ b/harry.html
@@ -87,15 +87,25 @@
     </blockquote>
   </div> 
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="container d-md-flex py-4">
-      <div class="mr-md-auto text-center text-md-left">
-        <div class="copyright">
-          Copyright &copy; <script>document.write(new Date().getFullYear())</script> <strong><span>19th Amendment</span></strong>. All Rights Reserved
+    <!-- ======= Footer ======= -->
+    <footer id="footer">
+      <div class="container d-md-flex py-4">
+        <div class="mr-md-auto text-center text-md-left">
+          <div class="copyright">
+            Copyright &copy; <script>document.write(new Date().getFullYear())</script> <strong><span>19th Amendment</span></strong>. All Rights Reserved
+          </div>
+        </div>
+        <div class="mr-md-auto text-center text-md-left">
+          Sources used on this page:
+          <ul>
+            <li><a href="https://constitutioncenter.org/blog/the-man-and-his-mom-who-gave-women-the-vote/">Constitutional Center</a></li>
+            <li><a href="http://teachtnhistory.org/File/Harry_T._Burn.pdf">Teach History</a></li>
+            <li><a href="https://teva.contentdm.oclc.org/digital/collection/p15138coll27/id/75">Teva</a></li>
+            <li><a href="https://www.history.com/news/american-womens-suffrage-19th-amendment-one-mans-vote">History.com's One man's vote</a></li>
+          </ul>
         </div>
       </div>
-    </div>
+    </footer>
     
   </body>
   </html>
