--- a/pre_process.html
+++ b/pre_process.html
@@ -12,7 +12,7 @@
   <!-- Navbar -->
   <div class="shadow p-3 mb-5 bg-white rounded sticky-top">
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: transparent !important;">
-      <a class="navbar-brand" href="#">19th Amendment</a>
+      <a class="navbar-brand" href="index.html">19th Amendment</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -20,7 +20,14 @@
         <div class="navbar-nav">
           <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           <a class="nav-link active" href="pre_process.html">pre-Process</a>
-          <a class="nav-link" href="process.html">Process</a>
+          <div class="dropdown">
+            <a class="nav-link">Process</a>
+            <div class="dropdown-content">
+              <a href="fed.html">Fed Gov't</a>
+              <a href="harry.html">Harry Burns</a>
+              <a href="states.html">States</a>
+            </div>
+          </div>
           <a class="nav-link" href="post_process.html">post-Process</a>
         </div>
       </div>
@@ -99,12 +106,16 @@
     </div>
   </div>
   
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="container d-md-flex py-4">
-      <div class="mr-md-auto text-center text-md-left">
-        <div class="copyright">
-          Copyright &copy; <script>document.write(new Date().getFullYear())</script> <strong><span>19th Amendment</span></strong>. All Rights Reserved
+    <!-- ======= Footer ======= -->
+    <footer id="footer">
+      <div class="container d-md-flex py-4">
+        <div class="mr-md-auto text-center text-md-left">
+          <div class="copyright">
+            Copyright &copy; <script>document.write(new Date().getFullYear())</script> <strong><span>19th Amendment</span></strong>. All Rights Reserved
+          </div>
         </div>
       </div>
-    </div>
+    </footer>
+
+  </body>
+  </html>
