--- a/harry.html
+++ b/harry.html
@@ -18,10 +18,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     <a class="nav-link" href="pre_process.html">pre-Process</a>
                     <div class="dropdown">
-                        <a class="nav-link">Process</a>
+                        <a class="nav-link active">Process</a>
                         <div class="dropdown-content">
                           <a href="fed.html">Fed Gov't</a>
                           <a href="harry.html">Harry Burn</a>
@@ -29,6 +29,7 @@
                         </div>
                       </div>
                     <a class="nav-link" href="post_process.html">post-Process</a>
+                    <a class="nav-link" href="sources.html">Sources</a>
                 </div>
             </div>
         </nav>
