--- a/post_process.html
+++ b/post_process.html
@@ -18,7 +18,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                    <a class="nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     <a class="nav-link" href="pre_process.html">pre-Process</a>
                     <div class="dropdown">
                       <a class="nav-link">Process</a>
@@ -28,8 +28,9 @@
                         <a href="states.html">States</a>
                       </div>
                     </div>
-                    <a class="nav-link" href="post_process.html">post-Process</a>
-                </div>
+                    <a class="nav-link active" href="post_process.html">post-Process</a>
+                    <a class="nav-link" href="sources.html">Sources</a>
+                  </div>
             </div>
         </nav>
     </div>
