--- a/pre_process.html
+++ b/pre_process.html
@@ -29,6 +29,7 @@
             </div>
           </div>
           <a class="nav-link" href="post_process.html">post-Process</a>
+          <a class="nav-link" href="sources.html">Sources</a>
         </div>
       </div>
     </nav>
@@ -113,6 +114,14 @@
           <div class="copyright">
             Copyright &copy; <script>document.write(new Date().getFullYear())</script> <strong><span>19th Amendment</span></strong>. All Rights Reserved
           </div>
+        </div>
+        <div class="mr-md-auto text-center text-md-left">
+          Sources used on this page:
+          <ul>
+            <li><a href="https://www.archives.gov/education/lessons/woman-suffrage">Woman Suffrage and the 19th Amendment. (2019, June 27). National Archives.</a></li>
+            <li><a href="https://iowaculture.gov/history/education/educator-resources/primary-source-sets/government-democracy-and-laws/declaration-0">“Declaration of Sentiments” Address by Elizabeth Cady Stanton in. (n.d.). IDCA.</a></li>
+            <li><a href="https://www.history.com/topics/womens-history/19th-amendment-1#:%7E:text=The%2019th%20Amendment%20to%20the,almost%20a%20century%20of%20protest.&text=Following%20the%20convention%2C%20the%20demand,of%20the%20women’s%20rights%20movement">History.com Editors. (2020, August 15). 19th Amendment. HISTORY.</a></li>
+          </ul>
         </div>
       </div>
     </footer>
