added last minute changes

--- a/harry.html
+++ b/harry.html
@@ -63,10 +63,10 @@
         <h1>Impact</h1>
         <br>
         <h4>Background of Situation</h4>
-        <p class="lead">Tennesse is the swing state that could decide whether or nor the ammendment gets the much needed 3/4 majority of states. Other states had either decied to vote down the proposal or even not take up a vote for the amendment. Tennesse was in a 48-48 stalemate over a motion to delay a ratification vote thus the ammendment stayed on the House floor. </p>
+        <p class="lead">Tennesse is the swing state that could decide whether or nor the amendment gets the much needed 3/4 majority of states. Other states had either decied to vote down the proposal or even not take up a vote for the amendment. Tennesse was in a 48-48 stalemate over a motion to delay a ratification vote thus the amendment stayed on the House floor. </p>
         <br>
         <h4>The Letter that Changed the Country</h4>
-        <p class="lead">Burn had voted to delay a vote on the ammendment and thus a deadlock was created. That day, Burn had came in with a red rose on his lapel which many took as a sign that he would always vote no. He did for the first 2 roll call, until it came to the third one. Unbeknownst to everyone else in the room, Burn recieved a letter form his mother, urging him to vote for ratification. The letter read: </p> 
+        <p class="lead">Burn had voted to delay a vote on the amendment and thus a deadlock was created. That day, Burn had came in with a red rose on his lapel which many took as a sign that he would always vote no. He did for the first 2 roll call, until it came to the third one. Unbeknownst to everyone else in the room, Burn recieved a letter form his mother, urging him to vote for ratification. The letter read: </p> 
         <blockquote class="blockquote text-center">
           <p class="mb-0"><a href="http://teachtnhistory.org/File/Harry_T._Burn.pdf">
             “Dear Son, … Hurray and vote for Suffrage and don’t keep them in doubt. I
@@ -77,7 +77,7 @@
             from mama this time. With lots of love, Mama.”</a></p>
           <footer class="blockquote-footer">Febb Burn</footer>
         </blockquote>
-        <p class="lead">He was in a bind because his re-election was coming up and his constituents were against ratification. The dilemma was between thinking about his re-election bid or following his mother's wishes. When the call came to Burn, he voted 'Aye' giving the majority vote in Tennesse to make Tennesse the 26th and final state to ratify the 19th ammendment . This caused heads to turn, as many thought he actually meant to vote "Nay". This vote caused an uproar among anti-suffragists. Burn was accused of being a traitor to manhood and being bought off.</p>
+        <p class="lead">He was in a bind because his re-election was coming up and his constituents were against ratification. The dilemma was between thinking about his re-election bid or following his mother's wishes. When the call came to Burn, he voted 'Aye' giving the majority vote in Tennesse to make Tennesse the 26th and final state to ratify the 19th amendment . This caused heads to turn, as many thought he actually meant to vote "Nay". This vote caused an uproar among anti-suffragists. Burn was accused of being a traitor to manhood and being bought off.</p>
         <p class="lead">Later, Burn narrowly survived re-election and remained honored to be that deciding vote.</p>
       </div>
   </div>
