--- a/post_process.html
+++ b/post_process.html
@@ -44,7 +44,7 @@
                     <h1 class="display-4">August 18, 1920</h1>
                     <h4>19th amendement is ratified</h4>
                     <br>
-                    <p class="lead">The ammendment gets the necessary 3/4 vote of the states and majority of Congress for ratification of an ammendment to the U.S. Constitution.</p>
+                    <p class="lead">The amendment gets the necessary 3/4 vote of the states and majority of Congress for ratification of an amendment to the U.S. Constitution.</p>
                   </div>
                   <div class="col">
                     <figure class="figure">
