--- a/states.html
+++ b/states.html
@@ -170,7 +170,7 @@
               <div class="row">
                   <div class="col-6">
                     <h1 class="display-4">June & July 1920</h1>
-                    <h4>Deleware votes against ratification while the states of Florida, Connecticut and Vermont refuse to consider a vote for the ammendment.</h4>
+                    <h4>Deleware votes against ratification while the states of Florida, Connecticut and Vermont refuse to consider a vote for the amendment.</h4>
                     <br>
                     <h4>It's up to Tennesse or North Carolina with the latter being unreliable for ratification.</h4>
                   </div>
@@ -198,7 +198,7 @@
                     <h1 class="display-4">August 1920</h1>
                     <h4>Tennesse gives the final vote needed for ratification.</h4>
                     <br>
-                    <h4>8/24: U.S SOS Bainbridge Colby certifies the ammendment</h4>
+                    <h4>8/24: U.S SOS Bainbridge Colby certifies the amendment</h4>
                   </div>
               </div>
           </div>
