--- a/harry.html
+++ b/harry.html
@@ -19,16 +19,16 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-link" href="pre_process.html">pre-Process</a>
+                    <a class="nav-link" href="pre_process.html">1840-1919</a>
                     <div class="dropdown">
-                        <a class="nav-link active">Process</a>
+                        <a class="nav-link active">1919-1920</a>
                         <div class="dropdown-content">
                           <a href="fed.html">Fed Gov't</a>
                           <a href="harry.html">Harry Burn</a>
                           <a href="states.html">States</a>
                         </div>
                       </div>
-                    <a class="nav-link" href="post_process.html">post-Process</a>
+                    <a class="nav-link" href="post_process.html">1920-1980s</a>
                     <a class="nav-link" href="sources.html">Sources</a>
                 </div>
             </div>
