fixed tab titles

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                     <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                    <a class="nav-link" href="pre_process.html">1840-1919</a>
+                    <a class="nav-link" href="pre_process.html">Pre-1919</a>
                     <div class="dropdown">
                         <a class="nav-link active">1919-1920</a>
                         <div class="dropdown-content">
@@ -28,7 +28,7 @@
                           <a href="states.html">States</a>
                         </div>
                       </div>
-                    <a class="nav-link" href="post_process.html">1920-1980s</a>
+                    <a class="nav-link" href="post_process.html">Post-1920</a>
                     <a class="nav-link" href="sources.html">Sources</a>
                 </div>
             </div>
