--- a/sources.html
+++ b/sources.html
@@ -50,7 +50,7 @@
         
     </div>
     <div class="container" style="margin: 20px; width: 1700px;">
-        <h4 class="lead"><strong>More Sources (MLA):</strong></h4>
+        <h4 class="lead"><strong>More Sources:</strong></h4>
         <ul>
             <li><p>Bomboy, Scott. “The vote that led to the 19th Amendment.” National Constitution Center, National Constitution Center, 18 August 2020, https://constitutioncenter.org/blog/the-man-and-his-mom-who-gave-women-the-vote/.</p></li>
             <li><p>Levy, Michael. “Nineteenth Amendment.” Britannica, Britannica, https://www.britannica.com/topic/Nineteenth-Amendment.</p></li>
